[package]
name = "task-manager"
version = "0.1.0"
authors = ["Sam Perlmutter <sam.perlmutter227@gmail.com>"]
edition = "2018"

[dependencies]
tui = {git = "https://github.com/fdehau/tui-rs"}
termion = "1.5"
sysinfo = {git = "https://github.com/GuillaumeGomez/sysinfo"}
# systemstat = "*"
itertools = "0.7"
failure = "0.1"
rand = "0.6"
