[package]
name = "tkm"
version = "0.1.0"
authors = ["Sam Perlmutter <sam.perlmutter227@gmail.com>"]
edition = "2018"

[dependencies]
tui = { git = "https://github.com/fdehau/tui-rs" }
termion = "1.5"
sysinfo = "0.3.14"
itertools = "0.8"
failure = "0.1"
rand = "0.6"
sys-info = "0.5.6"
pretty-bytes = "*"
