[package]
name = "tkm"
description = "A terminal based task manager."
version = "0.8.5"
authors = ["Sam Perlmutter <sam.perlmutter227@gmail.com>"]
edition = "2018"
repository = "https://github.com/samperlmutter/tkm"
license = "MIT"

[dependencies]
tui = "0.4.0"
termion = "1.5"
sysinfo = "0.8.*"
pretty-bytes = "0.2.2"
"nom" = "4.2.3"
